--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ input[type="range"]{
   -moz-apperance: none;
   border-radius: 50px;
   height: 6px;
-  background-color: #CCCCCC;
+  background-color: #999999;
 }
 
 input[type='range']::-webkit-slider-thumb {
