--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
 	flex-flow: column;
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: 100;
+  background: #eeeeee;
 }
 
 h1 {
@@ -26,20 +27,36 @@ input {
   outline:none;
 }
 
-input[type="range"]{
+.slider{
+  border-radius: 50px;
+  width: 300px;
+  height: 6px;
   -webkit-appearance: none;
   -moz-apperance: none;
-  border-radius: 50px;
-  height: 6px;
-  background-color: #999999;
+  background: #cccccc;
 }
 
-input[type='range']::-webkit-slider-thumb {
+.thumb {
+  width: 20px;
+  height: 20px;
+  border-radius: 50px;
   position: relative;
   -webkit-appearance: none !important;
-  background-color: white;
+  top: -7px;
+  background: white;
   box-shadow: 2px 2px 2px 2px #CCCCCC50;
+  cursor: pointer;
+}
+
+.inner-thumb{
+  width: 8px;
+  height: 8px;
+  position: absolute;
+  background: #cccccc;
   border-radius: 50px;
-  height: 20px;
-  width: 20px;
+  /*
+  Put top edge and left edge in the center
+  */
+  top: 6px;
+  left: 6px;
 }
